bpo-34880: assert statement misbehavior if AssertionError is shadowed